force-app/main/default/objects/AR_Detail_Setting__mdt/AR_Detail_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This configuration is used for Account Receivable Alerts.</description>
    <label>AR Detail Setting</label>
    <pluralLabel>AR Detail Settings</pluralLabel>
</CustomObject>