force-app/main/default/objects/AR_Detail_Setting__mdt/fields/Step_3_Open_AR_Balance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Step_3_Open_AR_Balance_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Step 3 Open AR Balance Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>