force-app/main/default/objects/AR_Detail_Setting__mdt/fields/Step_4_Maximum_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Step_4_Maximum_Due_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Step 4 Maximum Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>